--- a/design1/estimation.html
+++ b/design1/estimation.html
@@ -18,20 +18,21 @@
 				display: flex;
 			}
 			.navlink li{
-				float:left;
+				float: left;
+    			margin-top: 15px;
 			}
 			.navlink>li>a{
 				padding-top: .625rem;
 			    padding-bottom: .625rem;
 			    text-decoration: none;
-			    color: #0033a1;
+			    color: #fff;
 			    transition: color .3s ease;
 			    font-weight: 700;
 			    display: block;
 			    font-size: 16px;
 			}
 			.navlink>li>a:hover{
-				color:#ff8400;
+				color:#ffff00;
 			}
 
 			.has-search .form-control-feedback {
@@ -147,7 +148,7 @@
 		            </div>
 		        </section> -->
 				<section class="headerMiddle">
-		            <div class="container">
+		            <div class="container-fluid">
 		                <div class="row">
 		                    <div class="col-sm-3 col-xs-12">
 		                        <div class="logo">
@@ -176,8 +177,8 @@
 		                        </div>
 		                    </div>
 		                </div>
-		                <hr>
-		                <div class="row">
+		                
+		                <div class="row" style="border-top: 2px solid #d4d1d1;margin-top:25px;background-color: #1d455d;">
 		                	<div class="col-md-12">
 		                		<ul class="navlink">
 		                			<li><a href="estimation.html">Singapore</a></li>
